--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,15 @@
 {
+    "name": "nycofox/testdatagenerator",
+    "description": "Creates XML testdata using Faker and an input template",
     "require": {
-        "fzaninotto/faker": "~1.4"
-    }
+        "fzaninotto/faker": "~1.5@dev"
+    },
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "Nyco Fox",
+            "email": "nycofox@nycofox.com"
+        }
+    ],
+    "minimum-stability": "dev"
 }
